# elv

./: .gitignore  AGENTS.md  CLAUDE.md  ELV-NYU HPC Cloud Bursting Student Guide.md  Makefile  README.md  TODO.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: lint-after-edit.sh
REPOS/geometric-algebra-transformer/: setup.py
archived/: NEXT_STEPS.md  critique.md  plan.md
artifacts/phase0/: env_check.json  wandb_check.json
artifacts/phase9/: ablation_results.json
configs/: eval.yaml  train_grpo.yaml  train_prealign.yaml  train_sft.yaml  train_sft_phase1.yaml
docs/: NEXT_STEPS.md  RUNBOOK.md  api.md  architecture.md  dependencies.md  dimensions.md  dimensions_updated.md  final.md  gatr_scalars_deep_dive.md  pipeline_complete.md  plan.md
docs/sessionLogs/: session_2026-03-30.md  session_2026-04-05.md
notes/: findings.md  points.txt  rope_redesign_analysis.md
paper/: README.md  main.tex  references.bib
paper/figures/: permutation_curve.csv
paper/sections/: abstract.tex  conclusion.tex  experiments.tex  intro.tex  method.tex  related_work.tex
paper/tables/: ablation_results.tex  main_results.tex
papers/gridpe/: Li.bbl  Li.tex  aaai25.bib
scripts/: check_phase0_env.py  diag_grpo.py  generate_paper_assets.py  generate_synthetic_frames.py  run_phase9_ablations.py  setup_wandb.py  smoke_test.py  train.py
scripts/hpc/: run_phase0_check.slurm  run_phase9_ablation_array.slurm  run_prealign.slurm  run_sft.slurm  (+2 more)
tests/: conftest.py  test_ablations.py  test_backproject.py  test_benchmarks.py  test_camera.py  test_curriculum.py  test_datasets.py  test_encoders.py  test_fdpo.py  test_freeze_groups.py  test_gated_cross_attn.py  test_gatr_wrapper.py  test_gridcell_rope3d.py  test_grpo.py  test_habitat_env.py  test_metrics.py  test_model_integration.py  test_norm_matching.py  test_paper_assets.py  test_permutation_test.py  test_phase9.py  test_position_routing.py  test_prealign.py  test_preprocessing.py  test_qwen3_vl.py  test_rewards.py  test_rope_patch.py  test_sft.py  test_sva.py  test_sva_attention_probe.py
(+116 files in other folders)
